hphp/hack/test/typecheck/test_consts12.php.exp
File "test_consts12.php", line 3, characters 18-18:
Constant `X` is abstract but the class is concrete. Either provide an implementation here. (Typing[4465])
  File "test_consts12.php", line 2, characters 7-8:
  Or make the class abstract.
